tests/ui/const-generics/foreign-item-const-parameter.stderr
error[E0044]: foreign items may not have const parameters
  --> $DIR/foreign-item-const-parameter.rs:2:5
   |
LL |     fn foo<const X: usize>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ can't have const parameters
   |
   = help: replace the const parameters with concrete consts

error[E0044]: foreign items may not have type or const parameters
  --> $DIR/foreign-item-const-parameter.rs:4:5
   |
LL |     fn bar<T, const X: usize>(_: T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't have type or const parameters
   |
   = help: replace the type or const parameters with concrete types or consts

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0044`.
